<resources>
    <string name="app_name">MobileEstimate</string>
    <string name="app_name_long">Project Cost Management Application</string>
    <string name="app_version_tag_name">Achelois</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="search_hint">Search a Project</string>
    <string name="title_activity_guided_project_creation">Create Project</string>
    <string name="action_list_creation">List Creation</string>
    <string name="cancel_project_creation">Do you really want to quit the creation Process? All changes will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_save_project">Save Project</string>
    <string name="NewProjectIntentValueParam" translatable="false">NEWPROJECT</string>
    <string name="title_activity_function_point_project">Function Point Activity</string>
    <string name="title_activity_function_point_project_activtiy">Function Point Project</string>
    <string name="action_person_days_overview">Person Days Overview</string>
    <string name="action_terminate_project">Terminate Project</string>
    <string name="action_project_properties">Project Properties</string>
    <string name="project_created_text_part">"Created: "</string>
    <string name="factor_value_standard_value" translatable="false">0</string>
    <string name="function_point_influence_factor_item_integration">Integration into other applications</string>
    <string name="function_point_influence_factor_item_local_data">Local Data Processing</string>
    <string name="function_point_influence_factor_item_transaction_rate">Transaction Rate</string>
    <string name="function_point_influence_factor_item_arithmetic_operation">Arithmetic Operation</string>
    <string name="function_point_influence_factor_item_control_procedure">Control Procedure</string>
    <string name="function_point_influence_factor_item_exception_regulation">Exception Regulation</string>
    <string name="function_point_influence_factor_item_logic">Logic</string>
    <string name="function_point_influence_factor_item_processing_logic">Processing Logic</string>
    <string name="function_point_influence_factor_item_reusability">Reusability</string>
    <string name="function_point_influence_factor_item_stock_conversion">Stock Conversion</string>
    <string name="function_point_influence_factor_item_adaptability">Adaptability</string>
    <string name="project_hashmap_item_influencing_factors" translatable="false">INFLUENCINGFACTORS</string>
    <string name="project_hashmap_item_properties" translatable="false">PROPERTIES</string>
    <string name="project_hashmap_item_title" translatable="false">TITLE</string>
    <string name="project_hashmap_item_image" translatable="false">IMAGE</string>
    <string name="project_hashmap_item_iconname" translatable="false">ICONNAME</string>
    <string name="project_hashmap_item_creation_date" translatable="false">CREATIONDATE</string>
    <string name="project_hashmap_item_description" translatable="false">PROJECTDESCRIPTION</string>
    <string name="project_hashmap_item_estimation_technique" translatable="false">ESTIMATIONTECHNIQUE</string>
    <string name="PROJECT_VIEW_CODE" translatable="false">1001</string>
    <string name="CREATE_NEW_PROJECT_REQUEST_CODE" translatable="false">1002</string>
    <string name="msg_guided_project_creation_no_estimation_technique">You have chosen no Estimation Technique.</string>
    <string name="msg_guided_project_creation_chosen_estimation_technique">You have chosen the %s Estimation Technique.</string>
    <string name="error_this_should_not_happen">THIS SHOULD NOT HAPPEN!</string>
    <string name="function_point_estimation_input_data">Input Data</string>
    <string name="function_point_estimation_requests">"Requests "</string>
    <string name="function_point_estimation_output">Output</string>
    <string name="function_point_estimation_dataset">Dataset</string>
    <string name="function_point_estimation_reference_data">Reference Data</string>
    <string name="project_information">Project Information</string>
    <string name="project_analysis">Analysis</string>
    <string name="my_projects">My Projects</string>
    <string name="influencing_factors">Influencing Factors</string>
    <string name="export">Export</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="influence_factor_sample_name">Integration into other applications</string>
    <string name="influence_factor_sample_value" translatable="false">10</string>
    <string name="project_creation_overview_hint">Please Check all your input information.</string>
    <string name="function_point_estimation_sample_value" translatable="false">1000</string>
    <string name="nav_header_project_name_hint">Project Name</string>
    <string name="nav_header_user">User: testuser</string>
    <string name="function_point_sum_of_influences">Sum of Influences: </string>
    <string name="function_point_influence_rating">Factor Influence Rating: </string>
    <string name="function_point_change_factor_set_button">Change Factor Set</string>
    <string name="project_creation_estimation_technique_title">Estimation Technique</string>
    <string name="influence_factor_chosen_method_hint">You have chosen METHOD</string>
    <string name="influence_factor_question_text">Which set of influencing factors want you to use?</string>
    <string name="influence_factor_set_button">New Influencing Factor set</string>
    <string name="project_creation_market">For which market will the project be developed?</string>
    <string name="project_creation_development_kind">What kind of development?</string>
    <string name="project_creation_methology">What process methology will be used?</string>
    <string name="project_creation_programming_language">What programming language will be used?</string>
    <string name="project_creation_platform">For what platform will be developed?</string>
    <string name="project_creation_industry_sector">In which industry sector will be the project established?</string>
    <string name="project_creation_project_name">Enter a project Name</string>
    <string name="project_creation_description">Enter a project description</string>
    <string name="project_creation_image_name">ImageName</string>
    <string name="project_creation_change_icon">Change Project Icon</string>
    <string name="estimation_item_name">Reference Data</string>
    <string name="estimation_item_unweighted_points">Unweighted Points:</string>
    <string name="estimation_item_sample_value" translatable="false">10</string>
    <string name="influence_factor_list_item_base_value">Integration into other applications</string>
    <string name="influence_factor_list_item_value" translatable="false">0</string>
    <string name="project_list_creation_name">Item Name:</string>
    <string name="project_list_creation_value">Item Value</string>
    <string name="function_point_estimation_simple">Simple</string>
    <string name="function_point_estimation_medium">Medium</string>
    <string name="function_point_estimation_complex">Complex</string>
    <string name="estimation_technique_hint">Choose the estimation technique you want to use.</string>
    <string name="function_point_estimation_total_points">Total Points: </string>
    <string name="function_point_estimation_evaluated_total_points">Evaluated Function Points: </string>
    <string name="function_point_estimation_evaluated_person_days">Evaluated Person Days: </string>
    <string name="function_point_estimation_calculate_person_days_button">Calculate Person Days</string>
    <string name="pref_user_info_title" translatable="false">User Informations</string>
    <string name="pref_user_name_summary" translatable="false">Set username</string>
    <string name="pref_password_summary" translatable="false">Set password</string>
    <string name="pref_user_name_title" translatable="false">Username</string>
    <string name="pref_user_password_title" translatable="false">Password</string>
    <string name="pref_update_settings" translatable="false">UPDATE SETTINGS</string>
    <string name="pref_send_report_summary" translatable="false">Helps to fix bugs</string>
    <string name="pref_send_report" translatable="false">Send crash reports</string>
    <string name="pref_sync_frequency_summary" translatable="false">Set the synchronisation frequency</string>
    <string name="pref_sync_frequency" translatable="false">Synchronisation</string>
    <string name="pref_key_user_name" translatable="false">pref_key_user_name</string>
    <string name="pref_key_user_password" translatable="false">pref_key_user_password</string>
    <string name="export_excel">Export Excel</string>
    <string name="export_pdf">Export PDF</string>
    <string name="export_settings">Settings</string>
    <string name="export_choose_project">Choose a project</string>
    <string name="action_save_factor">Save</string>
    <string name="action_delete_factor">Delete Factor from database</string>
    <string name="action_create_new_factor">Create New Factor</string>
    <string name="action_change_estimation_technique">Change Estimation Technique</string>
    <string name="action_find_related_project">Find related projects</string>
    <string name="action_save">Save</string>
    <string name="action_open_statistics">Open Statistics</string>
    <string name="action_generate_demo_values">Generate Demo Values</string>
    <string name="action_change_analysis_sort_final_days">Arrange Final Days</string>
    <string name="estimation_technique_function_point">Function Point</string>
    <string name="estimation_technique_cocomo">COCOMO</string>
    <string name="estimation_technique_cocomo_2">COCOMO 2</string>
    <string name="preferences_user_informations_key">User Informations</string>
    <string name="preferences_database_settings">Database Settings</string>
    <string name="preferences_support">Help</string>
    <string name="pref_check_login">Check Login</string>
    <string name="preferences_synchronisation">Synchronisation</string>
    <string name="app_version">Version</string>
    <string name="copyright">© 2016 Oliver Fries</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="licence">Licence</string>
</resources>