<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_my_projects"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/my_projects"/>
        <item
            android:id="@+id/nav_project_analysis"
            android:icon="@drawable/line_chart"
            android:title="@string/project_analysis"/>

        <item
            android:id="@+id/nav_influencing_factors"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/influencing_factors"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_export"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/export"/>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>