<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.mobileprojectestimator.mobileprojectestimator.Activities.SettingsActivity$UserPreferenceFragment"
        android:icon="@drawable/ic_action_user"
        android:title="@string/preferences_user_informations_key"/>

    <header
        android:fragment="com.mobileprojectestimator.mobileprojectestimator.Activities.SettingsActivity$SynchronisationPreferenceFragment"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/preferences_synchronisation"/>

    <header
        android:fragment="com.mobileprojectestimator.mobileprojectestimator.Activities.SettingsActivity$DatabasePreferenceFragment"
        android:icon="@drawable/ic_action_database"
        android:title="@string/preferences_database_settings"/>

    <header
        android:fragment="com.mobileprojectestimator.mobileprojectestimator.Activities.SettingsActivity$SupportPreferenceFragment"
        android:icon="@drawable/ic_action_help"
        android:title="@string/preferences_support"/>

</preference-headers>
