<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Activities.ProjectPropertiesActivity">
    <item
        android:id="@+id/action_save_project_informations"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_change_estimation_method"
        android:orderInCategory="110"
        android:title="@string/action_change_estimation_technique"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_find_related_project"
        android:orderInCategory="120"
        android:title="@string/action_find_related_project"
        app:showAsAction="never"/>
</menu>
