<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Activities.CreateNewInfluenceFactorActivity">
    <item
        android:id="@+id/action_save_influence_factor"
        android:orderInCategory="102"
        android:title="@string/action_save_factor"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_delete_influence_factor"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="101"
        android:title="@string/action_delete_factor"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_create_new_influence_factor"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="102"
        android:title="@string/action_create_new_factor"
        app:showAsAction="never"/>
</menu>