<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobileprojectestimator.mobileprojectestimator.Activities.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/tvAppName"
        android:textColor="@color/dark_orange"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name_long"
        android:textColor="@color/dark_blue"
        android:id="@+id/tvAppNameLong"
        android:layout_below="@+id/tvAppName"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/app_version"
        android:textColor="@color/dark_blue"
        android:id="@+id/tvVersion"
        android:layout_below="@+id/tvAppNameLong"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivAppIcon"
        android:src="@drawable/project"
        android:layout_below="@+id/tvVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/copyright"
        android:id="@+id/tvCopyright"
        android:textColor="@color/dark_blue"
        android:layout_below="@+id/ivAppIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/all_rights_reserved"
        android:id="@+id/textView5"
        android:textColor="@color/dark_blue"
        android:layout_below="@+id/tvCopyright"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/licence"
        android:id="@+id/bLicence"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:theme="@style/Base.Widget.AppCompat.ActionButton"
        android:background="@color/standardButtonColor"
        android:layout_marginBottom="38dp"/>
</RelativeLayout>
