<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.mobileprojectestimator.mobileprojectestimator.FunctionPointProjectActivity">

    <ListView
        android:id="@+id/lv_function_point_estimation"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/totalPointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_function_point_estimation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/function_point_estimation_total_points"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/evaluatedFunctionPointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalPointsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/function_point_estimation_evaluated_total_points"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/evaluatedPersonDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evaluatedFunctionPointsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/function_point_estimation_evaluated_person_days"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evaluatedPersonDaysTextView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/standardButtonColor"
        android:text="@string/function_point_estimation_calculate_person_days_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:theme="@style/Base.Widget.AppCompat.ActionButton"/>
</RelativeLayout>